feat: replace email address info => support

--- a/site/public/privacy/index.html
+++ b/site/public/privacy/index.html
@@ -2,7 +2,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-110523681-1');
-  
+
   gtag('config', 'UA-110523681-1', { 'optimize_id': 'GTM-PNWRVST'});
 </script><style>.async-hide { opacity: 0 !important}</style><script>if (location.host === 'checklyhq.com') {
  (function(a,s,y,n,c,h,i,d,e){s.className+=' ' + y;h.start=1*new Date;
@@ -73,7 +73,7 @@ This data will only be used by Checkly to provide you with the service you expec
 our products and services, including but not limited to our Service. If you decide at any time that you no
 longer wish to receive such information or communications from us, please un-follow us, or follow the unsubscribe
 instructions provided in any of the communications. You may also opt out from receiving commercial email
-from us by sending your request to us by email at info@checklyhq.com.</p>
+from us by sending your request to us by email at support@checklyhq.com.</p>
 
 <h2 id="log-data">Log Data</h2>
 
