--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
   <meta property="twitter:description" content="Monitor the performance and correctness of your API endpoints &amp; vital site transactions from a single, simple dashboard" />
   <meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png" />
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
-  <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="icon" type="image/png" href="/images/racoon_favicon.3c48bb28.png" />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
   <link rel="alternate" href="https://checklyhq.com/" hreflang="en-us" />
   <link rel="canonical" href="https://checklyhq.com/" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.e5e1af43.css" />
   <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
@@ -82,7 +82,7 @@
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
-    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a><a
+    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.afa37391.svg" width="120" alt="checkly logo"/></a><a
       class="callout" href="/jobs">We're hiring!</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -123,7 +123,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12 text-center"><img class="hero-image img-fluid" src="/images/dashboard-screen@2x.png"
+      <div class="col-sm-12 text-center"><img class="hero-image img-fluid" src="/images/dashboard-screen@2x.b0dcdbb8.png"
                                               alt="checkly monitoring dashboard"/></div>
     </div>
   </div>
@@ -134,21 +134,21 @@
 with our Swagger or cURL importer and super easy API monitor creator.
 <br><br>
 Monitor your API performance from 16 different locations, as often as once every minute. We'll also check if
-your SSL certificate is about to expire.</p><a class="cta-link" href="/product/api-monitoring/">Learn more</a></div></div><div class="col-sm-6 offset-sm-1"><div class="image-side right"><img class="big-landing-image big-drop-shadow assertions fade-in ml-md-5 lazy" src="/landing/api-assertions@2x.png" alt="api monitoring"/><img class="big-landing-image big-drop-shadow results fade-in ml-md-5 lazy hidden-md-down" src="/landing/api-results@2x.png" alt="api monitoring"/></div></div></div></div></section>
+your SSL certificate is about to expire.</p><a class="cta-link" href="/product/api-monitoring/">Learn more</a></div></div><div class="col-sm-6 offset-sm-1"><div class="image-side right"><img class="big-landing-image big-drop-shadow assertions fade-in ml-md-5 lazy" src="/landing/api-assertions@2x.18781ee5.png" alt="api monitoring"/><img class="big-landing-image big-drop-shadow results fade-in ml-md-5 lazy hidden-md-down" src="/landing/api-results@2x.b66c3ae6.png" alt="api monitoring"/></div></div></div></div></section>
         <section class="site-monitoring-section"><div class="container"><div class="row"><div class="col-sm-5"><div class="text-side text-left"><h2 class="section-super-header">site transaction monitoring</h2><h3 class="section-header">No more broken shopping carts</h3><p class="lead-text">Monitor and validate your most crucial site transactions like logins, shopping carts and onboarding
 flows. Take screenshots to get instant insights into what's working and what's not.
 <br><br>
 Scripting browser click flows used to suck. Not anymore. Checkly uses Google's Puppeteer framework to run your
-flows in a Chrome browser.</p><a class="cta-link" href="/product/transaction-monitoring/">Learn more</a></div></div><div class="col-sm-6 offset-sm-1"><div class="image-side right"><img class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy" src="/landing/browser-code@2x.png" alt="site transaction monitoring"/><img class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down" src="/landing/browser-screenshots@2x.png" alt="site transaction monitoring"/></div></div></div></div></section>
-        <section class="alerting-section"><div class="container"><div class="row mb-lg-4"><div class="col-sm-12 text-center"><h2 class="section-super-header">Alerting</h2><h3 class="section-header mb-4">Alerting when and how you want it</h3><img class="img-w360 mb-4" src="/landing/alerting-options@2x.png" alt="alert notification channels"/></div><div class="col-sm-12 col-md-8 offset-md-2 text-center"><p class="lead-text">Keep your team up to date with a generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
-notifications. Control exactly how, when and how often you get alerted. Of course, "double-checking" is enabled by default to never get false positives.</p><a class="cta-link" href="/docs/alerting">Learn more</a><div class="mb-4 mb-lg-0"></div></div></div><div class="row"><div class="col-sm-12 text-center"><img class="alerting-image big-drop-shadow img-fluid" src="/landing/alert-settings-v2@2x.png" alt="alerting settings"/></div></div></div></section>
+flows in a Chrome browser.</p><a class="cta-link" href="/product/transaction-monitoring/">Learn more</a></div></div><div class="col-sm-6 offset-sm-1"><div class="image-side right"><img class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy" src="/landing/browser-code@2x.7b6a13fa.png" alt="site transaction monitoring"/><img class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down" src="/landing/browser-screenshots@2x.6c05dc1f.png" alt="site transaction monitoring"/></div></div></div></div></section>
+        <section class="alerting-section"><div class="container"><div class="row mb-lg-4"><div class="col-sm-12 text-center"><h2 class="section-super-header">Alerting</h2><h3 class="section-header mb-4">Alerting when and how you want it</h3><img class="img-w360 mb-4" src="/landing/alerting-options@2x.c2774868.png" alt="alert notification channels"/></div><div class="col-sm-12 col-md-8 offset-md-2 text-center"><p class="lead-text">Keep your team up to date with a generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
+notifications. Control exactly how, when and how often you get alerted. Of course, "double-checking" is enabled by default to never get false positives.</p><a class="cta-link" href="/docs/alerting">Learn more</a><div class="mb-4 mb-lg-0"></div></div></div><div class="row"><div class="col-sm-12 text-center"><img class="alerting-image big-drop-shadow img-fluid" src="/landing/alert-settings-v2@2x.b92fae8e.png" alt="alerting settings"/></div></div></div></section>
         <section class="results-section"><div class="container"><div class="row mb-lg-4"><div class="col-sm-12 text-center"><h2 class="section-super-header">Stats & metrics</h2><h3 class="section-header">Insights without limits</h3></div><div class="col-sm-12 col-md-8 offset-md-2 text-center"><p class="lead-text">Doing a root cause without complete and accurate data is insane. But too much detail can also be distracting.
 That's why next to calculating aggregates to keep an overview, Checkly stores each and every
-raw result for you and your team to dive into.</p></div></div><div class="row"><div class="col-sm-12 text-center"><img class="results-image img-fluid" src="/landing/check-results@2x.png" alt="monitoring results"/></div></div></div></section>
-        <section class="trusted-by-section"><div class="container"><div class="row"><div class="col-sm-12 col-lg-10 offset-lg-1"><h5 class="section-super-header mb-3">Trusted by engineering teams at</h5></div></div><div class="row"><div class="col-sm-12"><img class="trusted-by-image" src="/images/testimonials/customer_logos_horizontal_2@2x.png" alt="trusted by companies for api and browser transaction monitoring"/></div></div></div></section>
-        <section class="testimonial-section testimonial-1"><div class="container"><div class="row"><div class="col-sm-12 col-md-4"><div class="card testimonial-card big-drop-shadow mb-5 mb-md-0"><div class="card-block"><a href="https://supplypike.com" target="_blank"><img class="testimonial-logo" src="/images/testimonials/supplypike_logo.png"/></a><p class="testimonial-text">"Checkly helps our teams to ship code more confidently and guide data-driven decision making.
-Integrations with tools like Prometheus and PagerDuty make the adoption seamless."</p><div class="testimonial-portrait"><img src="/images/testimonials/supplypike_portrait.png"/></div><div class="testimonial-name-badge"><div class="text-muted font-weight-bold">Kanat Bekterimov</div><div class="text-muted">Software Engineer Manager</div><a class="text-muted" href="https://supplypike.com/" target="_blank">supplypike.com</a></div></div></div></div><div class="col-sm-12 col-md-4"><div class="card testimonial-card big-drop-shadow mb-5 mb-md-0"><div class="card-block"><a href="http://www.dfuse.io/" target="_blank"><img class="testimonial-logo" src="/images/testimonials/dfuse_logo.png" alt="dfuse logo"/></a><p class="testimonial-text">"Checkly is super easy to setup and the best option for us to test our Websocket API.
-We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"</p><div class="testimonial-portrait"><img src="/images/testimonials/dfuse_portrait.png" alt="customer portrait"/></div><div class="testimonial-name-badge"><div class="text-muted font-weight-bold">François Proulx</div><div class="text-muted">Senior DevSecOps</div><a class="text-muted" href="http://www.dfuse.io/" target="_blank">dfuse.io</a></div></div></div></div><div class="col-sm-12 col-md-4"><div class="card testimonial-card big-drop-shadow mb-5 mb-md-0"><div class="card-block"><a href="https://lyfegen.com/" target="_blank"><img class="testimonial-logo" src="/images/testimonials/lyfegen_logo.png"/></a><p class="testimonial-text">"Checkly feels seamless and responsive. It took me about ten minutes to migrate from Pingdom and StatusPage.io, saving on our monthly monitoring bill."</p><div class="testimonial-portrait"><img src="/images/testimonials/lyfegen_portrait.png"/></div><div class="testimonial-name-badge"><div class="text-muted font-weight-bold">James Gannon</div><div class="text-muted">Chief Digital Officer</div><a class="text-muted" href="https://lyfegen.com/" target="_blank">lyfegen.com</a></div></div></div></div></div></div></section>
+raw result for you and your team to dive into.</p></div></div><div class="row"><div class="col-sm-12 text-center"><img class="results-image img-fluid" src="/landing/check-results@2x.a556363d.png" alt="monitoring results"/></div></div></div></section>
+        <section class="trusted-by-section"><div class="container"><div class="row"><div class="col-sm-12 col-lg-10 offset-lg-1"><h5 class="section-super-header mb-3">Trusted by engineering teams at</h5></div></div><div class="row"><div class="col-sm-12"><img class="trusted-by-image" src="/images/testimonials/customer_logos_horizontal_2@2x.320cfcd4.png" alt="trusted by companies for api and browser transaction monitoring"/></div></div></div></section>
+        <section class="testimonial-section testimonial-1"><div class="container"><div class="row"><div class="col-sm-12 col-md-4"><div class="card testimonial-card big-drop-shadow mb-5 mb-md-0"><div class="card-block"><a href="https://supplypike.com" target="_blank"><img class="testimonial-logo" src="/images/testimonials/supplypike_logo.e68ded0b.png"/></a><p class="testimonial-text">"Checkly helps our teams to ship code more confidently and guide data-driven decision making.
+Integrations with tools like Prometheus and PagerDuty make the adoption seamless."</p><div class="testimonial-portrait"><img src="/images/testimonials/supplypike_portrait.a88ecea6.png"/></div><div class="testimonial-name-badge"><div class="text-muted font-weight-bold">Kanat Bekterimov</div><div class="text-muted">Software Engineer Manager</div><a class="text-muted" href="https://supplypike.com/" target="_blank">supplypike.com</a></div></div></div></div><div class="col-sm-12 col-md-4"><div class="card testimonial-card big-drop-shadow mb-5 mb-md-0"><div class="card-block"><a href="http://www.dfuse.io/" target="_blank"><img class="testimonial-logo" src="/images/testimonials/dfuse_logo.6acd4e24.png" alt="dfuse logo"/></a><p class="testimonial-text">"Checkly is super easy to setup and the best option for us to test our Websocket API.
+We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"</p><div class="testimonial-portrait"><img src="/images/testimonials/dfuse_portrait.41dcd692.png" alt="customer portrait"/></div><div class="testimonial-name-badge"><div class="text-muted font-weight-bold">François Proulx</div><div class="text-muted">Senior DevSecOps</div><a class="text-muted" href="http://www.dfuse.io/" target="_blank">dfuse.io</a></div></div></div></div><div class="col-sm-12 col-md-4"><div class="card testimonial-card big-drop-shadow mb-5 mb-md-0"><div class="card-block"><a href="https://lyfegen.com/" target="_blank"><img class="testimonial-logo" src="/images/testimonials/lyfegen_logo.ae6a3b2c.png"/></a><p class="testimonial-text">"Checkly feels seamless and responsive. It took me about ten minutes to migrate from Pingdom and StatusPage.io, saving on our monthly monitoring bill."</p><div class="testimonial-portrait"><img src="/images/testimonials/lyfegen_portrait.dd50d467.png"/></div><div class="testimonial-name-badge"><div class="text-muted font-weight-bold">James Gannon</div><div class="text-muted">Chief Digital Officer</div><a class="text-muted" href="https://lyfegen.com/" target="_blank">lyfegen.com</a></div></div></div></div></div></div></section>
         <section class="all-features-section"><div class="container"><div class="row mb-lg-5 mb-3"><div class="col-sm-12 text-center"><h2 class="section-header">All features at a glance</h2></div></div><div class="row"><div class="col-sm-4"><h5>API monitoring</h5><p>Flexible <a href='/product/api-monitoring/' class="info-link">API monitoring</a> with custom body, headers, query parameters and unlimited assertions.</p></div><div class="col-sm-4"><h5>Site transaction monitoring</h5><p>Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a href='/docs/browser-checks/screenshots/' class="info-link">Take up to three screenshots</a> per check.</p></div><div class="col-sm-4"><h5>SSL expiry alerting</h5><p>We'll alert you when your SSL certificate is about to expire up to 30 days in advance till D-day.</p></div></div><div class="row"><div class="col-sm-4"><h5>Global coverage</h5><p>Get global latency metrics by running your checks from up to eight (more coming) data center locations around the world.</p></div><div class="col-sm-4"><h5>Alerting channels</h5><p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, email, web hook and Slack alerting integrations.</p></div><div class="col-sm-4"><h5>Threshold alerting</h5><p>Control what <a href='/docs/alerting/' class="info-link">triggers alerts</a> and set reminders. We always run double checks to combat false positives.</p></div></div><div class="row"><div class="col-sm-4"><h5>Public dashboards</h5><p>Display a <a href='/docs/dashboards/' class="info-link">public dashboard</a> on your site or in-office mounted TV, hosted on your company domain.</p></div><div class="col-sm-4"><h5>Teams & users</h5><p><a href='/docs/teams/' class="info-link">Add team members to your account to collaborate</a>. Comes with full role based access control.</p></div><div class="col-sm-4"><h5>CI/CD integration</h5><p><a href='/docs/cicd/triggers/' class="info-link">Trigger your checks</a> on Github push & PR's or using a simple cURL command from your CI/CD pipeline.</p></div></div></div></section>
         <section class="public-stats-section"><div class="container"><div class="row"><div class="col-sm-12"><div class="counter-text">We ran<span class="counter" id="api-check-results"></span>API checks and<span class="counter" id="browser-check-results"></span>browser checks with 💖</div></div></div></div></section>
       </div>
@@ -158,7 +158,7 @@ We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3a
     <div class="row footer-top">
       <div class="col-sm-2">
         <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" alt="checkly logo"/>
+          <img src="/images/text_racoon_logo.afa37391.svg" width="100px" alt="checkly logo"/>
         </div>
       </div>
       <div class="col-sm-3">
@@ -210,7 +210,7 @@ We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3a
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
-            src="/images/twitter.svg" alt="twitter logo"/></a></div>
+            src="/images/twitter.98e5415a.svg" alt="twitter logo"/></a></div>
       </div>
     </div>
   </div>
@@ -227,7 +227,7 @@ We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3a
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/index.9773e75c.js"></script>
 
   </body>
 </html>
