--- a/public/product/alerting/index.html
+++ b/public/product/alerting/index.html
@@ -19,12 +19,12 @@ How it works Set up your thresholds The internet can be flaky. Sometimes a faili
 How it works Set up your thresholds The internet can be flaky. Sometimes a failing service is just fine 2 seconds later. Dodge false positives by specifying exactly when you should alerted and how often you want to be reminded." />
   <meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png" />
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
-  <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="icon" type="image/png" href="/images/racoon_favicon.3c48bb28.png" />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
   <link rel="alternate" href="https://checklyhq.com/product/alerting/" hreflang="en-us" />
   <link rel="canonical" href="https://checklyhq.com/product/alerting/" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.e5e1af43.css" />
   <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
@@ -87,7 +87,7 @@ How it works Set up your thresholds The internet can be flaky. Sometimes a faili
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
-    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a><a
+    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.afa37391.svg" width="120" alt="checkly logo"/></a><a
       class="callout" href="/jobs">We're hiring!</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -124,7 +124,7 @@ How it works Set up your thresholds The internet can be flaky. Sometimes a faili
 you want. Know when your service fails before your customers do.
 </p>
 
-<p><figure class="img-w720 mb-lg-5 text-center"><img src="/product/alerting/api_alert@2x.png" alt="alerting options"></figure></p>
+<p><figure class="img-w720 mb-lg-5 text-center"><img src="/product/alerting/api_alert@2x.a55a6ceb.png" alt="alerting options"></figure></p>
 
 <h2 id="how-it-works" class="mb-4 section-header text-center">How it works</h2>
 
@@ -140,7 +140,7 @@ exactly when you should alerted and how often you want to be reminded.</p>
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/alerting/alert_settings@2x.png"
+      src="/product/alerting/alert_settings@2x.26093b85.png"
       alt="Set up your thresholds"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -159,7 +159,7 @@ custom? Use the webhooks or hook up <a href="/docs/integrations/prometheus/">our
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/alerting/channels@2x.png"
+      src="/product/alerting/channels@2x.ddfb8d24.png"
       alt="Pick your channels"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -176,7 +176,7 @@ any (legacy) system out there.
 
 </p>
 
-<p><figure class="img-w720 mb-lg-5 text-center"><img src="/product/alerting/webhooks@2x.png" alt="webhooks editor"></figure></p>
+<p><figure class="img-w720 mb-lg-5 text-center"><img src="/product/alerting/webhooks@2x.9ca184fd.png" alt="webhooks editor"></figure></p>
 
 <div class="row pt-5 pb-5">
  
@@ -209,7 +209,7 @@ any (legacy) system out there.
     <div class="row footer-top">
       <div class="col-sm-2">
         <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" alt="checkly logo"/>
+          <img src="/images/text_racoon_logo.afa37391.svg" width="100px" alt="checkly logo"/>
         </div>
       </div>
       <div class="col-sm-3">
@@ -261,7 +261,7 @@ any (legacy) system out there.
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
-            src="/images/twitter.svg" alt="twitter logo"/></a></div>
+            src="/images/twitter.98e5415a.svg" alt="twitter logo"/></a></div>
       </div>
     </div>
   </div>
@@ -278,7 +278,7 @@ any (legacy) system out there.
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/index.9773e75c.js"></script>
 
 </body>
 </html>
