--- a/public/product/transaction-monitoring/index.html
+++ b/public/product/transaction-monitoring/index.html
@@ -16,12 +16,12 @@
   <meta property="twitter:description" content="Transaction monitoring for your vital click flows Broken signup forms and flaky shopping carts are extremely frustrating to your customers. With Checkly&#39;s web transaction monitoring you can accurately simulate interaction with your site and validate the correctness and performance of all your crucial click paths. Real browsers Your checks are run in actual Chrome browsers to achieve a 100% match with real world conditions. We run each session in a sealed of sandbox for extra security." />
   <meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png" />
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
-  <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="icon" type="image/png" href="/images/racoon_favicon.3c48bb28.png" />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
   <link rel="alternate" href="https://checklyhq.com/product/transaction-monitoring/" hreflang="en-us" />
   <link rel="canonical" href="https://checklyhq.com/product/transaction-monitoring/" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.e5e1af43.css" />
   <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
@@ -84,7 +84,7 @@
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
-    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a><a
+    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.afa37391.svg" width="120" alt="checkly logo"/></a><a
       class="callout" href="/jobs">We're hiring!</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -181,7 +181,7 @@ Getting a monitoring script going is a lot easier than you might think. Just fol
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/transaction-monitoring/script.png"
+      src="/product/transaction-monitoring/script.5a5d0c99.png"
       alt="Create a script"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -200,7 +200,7 @@ and navigation actions. Add the industry standard <strong>Mocha and Chai librari
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/transaction-monitoring/tweak.png"
+      src="/product/transaction-monitoring/tweak.06b947b9.png"
       alt="Tweak it"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -220,7 +220,7 @@ an alert is triggered.</p>
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/transaction-monitoring/results.png"
+      src="/product/transaction-monitoring/results.3908ca02.png"
       alt="Run it every ten minutes"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -243,7 +243,7 @@ Recorder Chrome browser extension to get started ASAP.
 to login and shopping carts. Use them as pa jumping off point and customize them for your own situation.</p>
 <p><!-- raw HTML omitted -->Learn more<!-- raw HTML omitted --></p>
 </p>
-  <img src="/product/transaction-monitoring/examples.png" alt="" />
+  <img src="/product/transaction-monitoring/examples.520bcc12.png" alt="" />
 </div>
 
 <div class="col-sm-6 mb-lg-3">
@@ -252,14 +252,14 @@ to login and shopping carts. Use them as pa jumping off point and customize them
 This extension has a ton of options for tweaking your scripts as you click through your site and fill out web forms.</p>
 <p><!-- raw HTML omitted -->Learn more<!-- raw HTML omitted --></p>
 </p>
-  <img src="/product/transaction-monitoring/recorder.png" alt="" />
+  <img src="/product/transaction-monitoring/recorder.26ffb9e9.png" alt="" />
 </div>
 
 <p></div></p>
 
 <h2 id="alerting-for-any-situation" class="pt-5 section-header text-center">Alerting for any situation</h2>
 
-<p><figure class="img-w360 mb-lg-5 text-center"><img src="/landing/alerting-options@2x.png" alt="alerting options"></figure></p>
+<p><figure class="img-w360 mb-lg-5 text-center"><img src="/landing/alerting-options@2x.c2774868.png" alt="alerting options"></figure></p>
 
 <p class="text-center lead-text mb-lg-5">
 When a check fails, you and your team need timely and actionable insights to address any down time.
@@ -272,7 +272,7 @@ Need more control? Webhooks give you full access to the JSON data we use ourselv
 
 <h2 id="global-coverage" class="pt-5 section-header text-center">Global coverage</h2>
 
-<p><figure class="img-w720 mb-lg-5 text-center"><img src="/landing/data-center-locations@2x.png" alt="alerting options"></figure></p>
+<p><figure class="img-w720 mb-lg-5 text-center"><img src="/landing/data-center-locations@2x.e57396f5.png" alt="alerting options"></figure></p>
 
 <p class="text-center lead-text mb-lg-5">
 Get a clear picture of how your services perform for all your users around the world. Run your check from any of sixteen
@@ -293,7 +293,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
     <div class="row footer-top">
       <div class="col-sm-2">
         <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" alt="checkly logo"/>
+          <img src="/images/text_racoon_logo.afa37391.svg" width="100px" alt="checkly logo"/>
         </div>
       </div>
       <div class="col-sm-3">
@@ -345,7 +345,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
-            src="/images/twitter.svg" alt="twitter logo"/></a></div>
+            src="/images/twitter.98e5415a.svg" alt="twitter logo"/></a></div>
       </div>
     </div>
   </div>
@@ -362,7 +362,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/index.9773e75c.js"></script>
 
 </body>
 </html>
