--- a/public/pricing/index.html
+++ b/public/pricing/index.html
@@ -16,12 +16,12 @@
   <meta property="twitter:description" content="Monitor the performance and correctness of your API endpoints &amp; vital site transactions from a single, simple dashboard" />
   <meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png" />
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
-  <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="icon" type="image/png" href="/images/racoon_favicon.3c48bb28.png" />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
   <link rel="alternate" href="https://checklyhq.com/pricing/" hreflang="en-us" />
   <link rel="canonical" href="https://checklyhq.com/pricing/" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.e5e1af43.css" />
   <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
@@ -84,7 +84,7 @@
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
-    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a><a
+    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.afa37391.svg" width="120" alt="checkly logo"/></a><a
       class="callout" href="/jobs">We're hiring!</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -739,9 +739,9 @@
           >
         </div>
       </div>
-      <section class="testimonial-section testimonial-2"><div class="container"><div class="row"><div class="col-sm-12"><div class="card testimonial-card mb-5 mb-md-0"><div class="card-block"><a href="https://www.nomanini.com/" target="_blank"><img class="testimonial-logo" src="/images/testimonials/nomanini_logo.png" alt="customer logo"/></a><p class="testimonial-text">"We use Checkly to monitor our customer experience, because it gives us unbiased feedback on how our systems are performing.
+      <section class="testimonial-section testimonial-2"><div class="container"><div class="row"><div class="col-sm-12"><div class="card testimonial-card mb-5 mb-md-0"><div class="card-block"><a href="https://www.nomanini.com/" target="_blank"><img class="testimonial-logo" src="/images/testimonials/nomanini_logo.2e6fa439.png" alt="customer logo"/></a><p class="testimonial-text">"We use Checkly to monitor our customer experience, because it gives us unbiased feedback on how our systems are performing.
 Using the Prometheus integration, we can display Checkly’s data alongside our other monitoring data on a display in our office.
-This gives us full insight into our availability and error budgets."</p><div class="testimonial-portrait"><img src="/images/testimonials/nomanini_portrait.png" alt="customer portrait"/></div><div class="testimonial-name-badge"><div class="font-weight-bold">Dale Humbley</div><div class="text-muted">CTO</div><a class="text-muted" href="https://www.nomanini.com/" target="_blank">Nomanini</a></div></div></div></div></div></div></section>
+This gives us full insight into our availability and error budgets."</p><div class="testimonial-portrait"><img src="/images/testimonials/nomanini_portrait.c9026ad4.png" alt="customer portrait"/></div><div class="testimonial-name-badge"><div class="font-weight-bold">Dale Humbley</div><div class="text-muted">CTO</div><a class="text-muted" href="https://www.nomanini.com/" target="_blank">Nomanini</a></div></div></div></div></div></div></section>
       <div class="container mb-4">
         <div class="row">
           <div class="col-sm-12 text-center">
@@ -798,7 +798,7 @@ you owe: no double bookings. We will also add a proration line to your invoice.<
     <div class="row footer-top">
       <div class="col-sm-2">
         <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" alt="checkly logo"/>
+          <img src="/images/text_racoon_logo.afa37391.svg" width="100px" alt="checkly logo"/>
         </div>
       </div>
       <div class="col-sm-3">
@@ -850,7 +850,7 @@ you owe: no double bookings. We will also add a proration line to your invoice.<
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
-            src="/images/twitter.svg" alt="twitter logo"/></a></div>
+            src="/images/twitter.98e5415a.svg" alt="twitter logo"/></a></div>
       </div>
     </div>
   </div>
@@ -867,7 +867,7 @@ you owe: no double bookings. We will also add a proration line to your invoice.<
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/index.9773e75c.js"></script>
 
 </body>
 </html>
