--- a/public/product/api-monitoring/index.html
+++ b/public/product/api-monitoring/index.html
@@ -16,12 +16,12 @@
   <meta property="twitter:description" content="Checkly&#39;s deep but easy to use API monitoring solution checks your mobile, webapp or IOT API for performance, uptime and correctness." />
   <meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png" />
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
-  <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="icon" type="image/png" href="/images/racoon_favicon.3c48bb28.png" />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
   <link rel="alternate" href="https://checklyhq.com/product/api-monitoring/" hreflang="en-us" />
   <link rel="canonical" href="https://checklyhq.com/product/api-monitoring/" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.e5e1af43.css" />
   <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
@@ -84,7 +84,7 @@
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
-    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a><a
+    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.afa37391.svg" width="120" alt="checkly logo"/></a><a
       class="callout" href="/jobs">We're hiring!</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -175,7 +175,7 @@ token for authentication.</p>
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/api-monitoring/http-request@2x.png"
+      src="/product/api-monitoring/http-request@2x.370c8008.png"
       alt="Create an HTTP request"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -194,7 +194,7 @@ plain text or JSON bodies and headers. <strong>Drill into JSON payloads with JSO
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/api-monitoring/assertions@2x.png"
+      src="/product/api-monitoring/assertions@2x.4c6efee0.png"
       alt="Add API check assertions"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -214,7 +214,7 @@ fetch OAuth tokens and update request attributes before any request is done. Use
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/api-monitoring/setup-teardown.png"
+      src="/product/api-monitoring/setup-teardown.9fd54062.png"
       alt="Customize setup &amp; teardown"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -231,7 +231,7 @@ Next to aggregating metrics, we give you <strong>access to each result</strong> 
   </div>
   <div class="col-sm-8 text-right">
     <img
-      src="/product/api-monitoring/results.png"
+      src="/product/api-monitoring/results.0c362e2a.png"
       alt="Monitor your API every minute"
       class="img-w720 big-drop-shadow rounded"
     />
@@ -240,7 +240,7 @@ Next to aggregating metrics, we give you <strong>access to each result</strong> 
 
 <h2 id="alerting-for-any-situation" class="pt-5 section-header text-center">Alerting for any situation</h2>
 
-<p><figure class="img-w360 mb-lg-5 text-center"><img src="/landing/alerting-options@2x.png" alt="alerting options"></figure></p>
+<p><figure class="img-w360 mb-lg-5 text-center"><img src="/landing/alerting-options@2x.c2774868.png" alt="alerting options"></figure></p>
 
 <p class="text-center lead-text mb-lg-5">
 When a check fails, you and your team need timely and actionable insights to address any down time.
@@ -253,7 +253,7 @@ Need more control? Webhooks give you full access to the JSON data we use ourselv
 
 <h2 id="global-coverage" class="pt-5 section-header text-center">Global coverage</h2>
 
-<p><figure class="img-w720 mb-lg-5 text-center"><img src="/landing/data-center-locations@2x.png" alt="alerting options"></figure></p>
+<p><figure class="img-w720 mb-lg-5 text-center"><img src="/landing/data-center-locations@2x.e57396f5.png" alt="alerting options"></figure></p>
 
 <p class="text-center lead-text mb-lg-5">
 Get a clear picture of how your services perform for all your users around the world. Run your check from any of sixteen
@@ -274,7 +274,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
     <div class="row footer-top">
       <div class="col-sm-2">
         <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" alt="checkly logo"/>
+          <img src="/images/text_racoon_logo.afa37391.svg" width="100px" alt="checkly logo"/>
         </div>
       </div>
       <div class="col-sm-3">
@@ -326,7 +326,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
-            src="/images/twitter.svg" alt="twitter logo"/></a></div>
+            src="/images/twitter.98e5415a.svg" alt="twitter logo"/></a></div>
       </div>
     </div>
   </div>
@@ -343,7 +343,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/index.9773e75c.js"></script>
 
 </body>
 </html>
